--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "file-loader": "^6.1.0",
     "material-components-web": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-forge": "^0.10.0",
     "postcss-loader": "^3.0.0",
     "purgecss-webpack-plugin": "^2.3.0",
     "sass": "^1.26.11",
