--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "material-components-web": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-forge": "^0.10.0",
+    "postcss": "^8.2.10",
     "postcss-loader": "^3.0.0",
     "purgecss-webpack-plugin": "^2.3.0",
     "sass": "^1.26.11",
